--- a/long_b.ipynb
+++ b/long_b.ipynb
@@ -28,10 +28,11 @@
     "    print(xls.sheet_names)\n",
     "    df = pd.read_excel(xls, sheet_name=xls.sheet_names[0])\n",
     "    print(df.head())\n",
-    "    df = df.drop(index=df.index[:1])\n",
+    "    #df = df.drop(index=df.index[:1])\n",
     "    df = df.transpose()\n",
     "    if \"long_beacon\" in file_path:\n",
     "        df.drop(df.columns[-1], axis = 1, inplace = True)\n",
+    "        df.drop(df.columns[1], axis = 1, inplace = True)\n",
     "    df.head()\n",
     "    df.columns = df.iloc[0]\n",
     "    df = df[:]\n",
